# git-url-parse-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  git_url_parse.pyi  pyproject.toml
.github/workflows/: ci.yml  maturin.yaml
scripts/: download_artifacts.sh  upload_to_pypi.sh
src/: lib.rs  python.rs
tests/: parse.rs
