[package]
authors = ["T.J. Telan <t.telan@gmail.com>", "XieJiSS <XieJiSS@users.noreply.github.com>"]
categories = ["parser-implementations", "encoding"]
description = "A parser for git repo urls based on url crate"
edition = "2021"
keywords = ["git", "url", "parsing", "normalize"]
license = "MIT"
name = "git-url-parse"
readme = "README.md"
repository = "https://github.com/XieJiSS/git-url-parse-rs"
version = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
tracing = ["dep:tracing"]
python = ["dep:pyo3"]

[dependencies]
tracing = { version = "0.1", optional = true }
url = { version = "2.2" }
strum = { version = "^0.26", features = ["derive"] }
thiserror = "^1.0"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"], optional = true }

[dev-dependencies]
env_logger = "^0.11"
regex = "^1.10"

[build-dependencies]
pyo3-build-config = { version = "0.25", features = ["resolve-config"] }
which = "8.0"
