[project]
name = "git-url-parse-rs"
version = "0.4.5"
description = ""
authors = [
    {name = "XieJiSS",email = "XieJiSS@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = []

[build-system]
requires = ["maturin (>=1.9.3,<2.0.0)"]
build-backend = "maturin"

[tool.poetry]
package-mode = false

# use twine to publish artifacts because we have to use gh actions os matrix to achieve native builds
[tool.poetry.group.build.dependencies]
twine = "^6.1.0"

[tool.maturin]
module-name = "git_url_parse_rs"
